-----------------------------------------------------
Now you can use Key_home : go to cell "A1"
	Key_Prior =>Key_PageUp : Decrease of 10 cells => go to cell "x(n-10)"
	Key_Next =>Key_PageDown: Increase of 10 cells => go to cell "x(n+10)"
Add new function in Kspread_dlg_sort Now you can sort in mode Decrease or
Increase.
bugs fix
Add CTRL+Key_G => call dlg : goto

1999-09-13 -Montel laurent <montell@club-internet.fr>
-----------------------------------------------------
Add new functions :
	-logic : IF , NO , TRUE,FALSE
	-Math : INT
	-Text : EXACT, RIGHT, LEFT,conc ,NBCAR,STXT

1999-09-15 -Montel laurent <montell@club-internet.fr>
-----------------------------------------------------		
-Add new dialogBox kspread_dlg_anchor now you can create Anchor
-Add currencySymbol so now when you click on Money button it adds
symbol of your land but I test it on american language so I don't know
if it works on others languages.
-Add new dialogue box Now when you choose your function there is
this dialogBox which arrived and show you what do you write.
It give the number of parameters etc ...
-fixbug

1999-09-16 -Montel laurent <montell@club-internet.fr>
-----------------------------------------------------	
-Now Kspread_dlg_create works ,you can select with mouse.
-MouseDoubleClick on canvas call layout_dlg.

1999-09-17 -Montel laurent <montell@club-internet.fr>
-----------------------------------------------------	
-Cleanup in kspread_dlg_create
-Improved Kspread_dlg_create. Now if you choose a function in a cell
and you unselect it, when you close kspread_dlg_create, cell is recreating.
-Add new button for choose function, you can add function if = is not here
in the cell or editwidget = is add.

1999-09-18 -Montel laurent <montell@club-internet.fr>
-----------------------------------------------------
Now when you click on bold button or italic button and in the cell
it's a richtext so you add <i> </i> or <b> </b> .
So text is in italic or bold.